welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:4: error: identifier expected but string literal found.
	while(getColourSol():Color!="blue") {
                                    ^Runner:9: error: ')' expected but '}' found.
}
^