welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (i <- 1 to 28) {
	getColourSol():Color
	while(getColourSol():Color!="blue") {
		avance()
	}
	recule()
	gauche()
}
